Update EDA of Olympic Games' Results for 120 years.ipynb

--- a/EDA of Olympic Games' Results for 120 years.ipynb
+++ b/EDA of Olympic Games' Results for 120 years.ipynb
@@ -7,7 +7,7 @@
     "# Exploratory Data Analysis of Olympic Games' Results for 120 years.\n",
     "\n",
     "### What is this\n",
-    "In this article, we're going to analyze the Olympic dataset which contains the results of each Olympic competition. The dataset has data on atletets who have participated in the Olympics for 120 years(their name, nationarity, result, etc.).\n",
+    "In this article, we're going to analyze the Olympic dataset which contains the results of each Olympic competition. The dataset has data on atletets who have participated in the Olympics for 120 years(their name, nationality, result, etc.).\n",
     "Through the analysis, we aim to:\n",
     "1. know the results of Olympics for 120 years.\n",
     "2. understands the trends of the Olympic games' results.\n",
@@ -3761,7 +3761,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we get new datframe containing the percentage of the number of athletes to populaiton. Let's plot the bar chart of same countries with Charts1, but ordered by percent of athletes to total population."
+    "Now we get new dataframe containing the percentage of the number of athletes to populaiton. Let's plot the bar chart of same countries with Charts1, but ordered by percent of athletes to total population."
    ]
   },
   {
@@ -3801,7 +3801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q3:　Which country aqcuires the most medals?"
+    "### Q3:　Which country acquires the most medals?"
    ]
   },
   {
@@ -3980,7 +3980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q4:　Who aqcuires the most medals in history? and which sport?"
+    "### Q4:　Who acquires the most medals in history? and which sport?"
    ]
   },
   {
